--- a/app/views/home/categories.html.haml
+++ b/app/views/home/categories.html.haml
@@ -8,11 +8,16 @@
 		.span9.main-content-box
 			.row
 				.sapn10
-					- (1..3).each do |i|
-						.row.cat-row
+					.row.cat-row
+						- @registries.each do |registry|						
 							.span2
-								= image_tag "test.png"
-							.span2
-								= image_tag "test.png"
-							.span2
-								= image_tag "test.png"
+								= link_to(image_tag("test.png"), registry_view_path+"?id="+registry.id.to_s)
+					
+					/- (1..3).each do |i|
+					/	.row.cat-row
+					/		.span2
+					/			= image_tag "test.png"
+					/		.span2
+					/			= image_tag "test.png"
+					/		.span2
+					/			= image_tag "test.png"
