--- a/app/views/layouts/_left_side.html.haml
+++ b/app/views/layouts/_left_side.html.haml
@@ -22,7 +22,7 @@
 				%li
 
 			%li
-				= link_to "MANAGE YOUR REGISTRY", "#"
+				= link_to "MANAGE YOUR REGISTRY", manage_registry_path
 .row
 	.span3.login-box		
 		- if user_signed_in?
