--- a/app/assets/stylesheets/registry.css.scss
+++ b/app/assets/stylesheets/registry.css.scss
@@ -3,10 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #facebox{
 	width: 500px;
+	margin-top: 50px;
 	.popup{
 		width: 500px;
 		.content{
 			margin-left: 0px;
+			margin-right: 0px;
 			#main{
 				width: 480px;
 				.container{
@@ -15,6 +17,29 @@
 						margin-left: 0px;
 					}
 				}
+			}
+		}
+		.close{
+			opacity: 0.7;
+		}
+	}
+}
+
+.subscriptions-page{
+	form{
+		.row{
+			margin: 15px 0px;
+		}
+		span{
+			float: left;
+			min-width: 50px;
+			margin-left: 15px;
+			input{
+				float: left;
+			}
+			label{
+				floag: left;
+				margin-left: 20px;
 			}
 		}
 	}
