complete payment transaction

--- a/app/views/registry/purchase.html.haml
+++ b/app/views/registry/purchase.html.haml
@@ -23,7 +23,7 @@
 							%label.price= @offer.price
 							%label.offer-option Offer
 					.row{:style=>"text-align:center"}
-						%a.btn.btn-purchase.custom-btn{:href=>"#"} PURCHASE
+						%a.btn.btn-purchase.custom-btn{:href=>payment_new_path} PURCHASE
 						%br/
 						%br/
 						- if @offer.luxe_registry.present? and current_user.luxe_registries.include? @offer.luxe_registry
