--- a/app/views/luxe_registries/new.html.haml
+++ b/app/views/luxe_registries/new.html.haml
@@ -3,7 +3,7 @@
 		.top-nav
 			%ul
 				%li.active
-					%a{:href=>new_luxe_registry_path} LUXE-REGISTRY
+					%a{:href=>root_url} LUXE-REGISTRY
 				%li
 					%a{:href=>schedule_consultation_path} SCHEDULE A CONSULTATION
 				%li
