--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,6 +19,11 @@
     font-weight: 300;
     margin-bottom: 24px;
     margin-top: 26px;
+    a{
+    	&:hover{
+    		text-decoration: none;
+    	}
+    }
 	}
 	ul{
 		margin-bottom:20px;
