--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -16,7 +16,7 @@
 						%tr
 							%td= event.name
 							%td= link_to 'Edit', edit_event_path(event)
-							%td= link_to 'Destroy', event, :method => :delete, :data => { :confirm => 'Are you sure?' }
+							%td= link_to 'Delete', event, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 				%br
 
