--- a/app/views/luxe_registries/index.html.haml
+++ b/app/views/luxe_registries/index.html.haml
@@ -25,9 +25,9 @@
               %td= luxe_registry.event.name
               %td= luxe_registry.event_date.strftime('%m/%d/%Y')
               %td
-                = link_to 'Show', luxe_registry, :class=>"btn btn-mini"
+                /= link_to 'Show', luxe_registry, :class=>"btn btn-mini"
                 = link_to 'Edit', edit_luxe_registry_path(luxe_registry), :class=>"btn btn-mini"
-                = link_to 'Destroy', luxe_registry, :method => :delete, :data => { :confirm => 'Are you sure?' }, :class=>"btn btn-mini btn-danger"
+                = link_to 'Delete', luxe_registry, :method => :delete, :data => { :confirm => 'Are you sure?' }, :class=>"btn btn-mini btn-danger"
       %br
       .row.last-row
         = link_to 'New Registry', new_luxe_registry_path, :class=>"new-registry"
