--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -29,7 +29,7 @@
             %td= offer.merchant
             %td= link_to "Preview", "/purchase/"+offer.id.to_s, :class => 'btn btn-mini'
             %td= link_to 'Edit', edit_offer_path(offer), :class => 'btn btn-mini'
-            %td= link_to 'Destroy', offer, :method => :delete, :data => { :confirm => 'Are you sure?' }, :class=>"btn btn-mini btn-danger"
+            %td= link_to 'Delete', offer, :method => :delete, :data => { :confirm => 'Are you sure?' }, :class=>"btn btn-mini btn-danger"
 
       %br
 
