fixing checkout processing

--- a/app/views/layouts/_left_side.html.haml
+++ b/app/views/layouts/_left_side.html.haml
@@ -23,7 +23,7 @@
 				%li
 
 			%li
-				= link_to "MANAGE YOUR REGISTRY", manage_registry_path
+				= link_to "MANAGE YOUR REGISTRY", luxe_registries_path
 .row
 	.span3.login-box		
 		- if user_signed_in?
