--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -4,16 +4,16 @@
       %label.page-title Offers List
   %br/
   .row.second-row
-    .input-form{:style=>"margin-bottom:30px;"}
-      %table
+    .input-form{:style=>"margin-bottom:30px;overflow-x: scroll;"}
+      %table.table-striped.table-hover
         %tr
-          %th Title
-          %th Summary
-          %th Overview
-          %th Amount
-          %th Details
-          %th Location
-          %th Merchant
+          %th{:style=>"width: 5%"} Title
+          %th{:style=>"width: 15%"} Summary
+          %th{:style=>"width: 15%"} Overview
+          %th{:style=>"width: 5%"} Amount
+          %th{:style=>"width: 15%"} Details
+          %th{:style=>"width: 15%"} Location
+          %th{:style=>"width: 15%"} Merchant
           %th
           %th
           %th
