--- a/app/views/payment/new.html.haml
+++ b/app/views/payment/new.html.haml
@@ -48,8 +48,8 @@
 					.span4
 						%label Billing Address
 						%br/
-						= f.input :address, :label=>"Addrewss1*", required: false
-						= f.input :optional_address, :label=>"Addrewss2", required: false
+						= f.input :address, :label=>"Address1*", required: false
+						= f.input :optional_address, :label=>"Address2", required: false
 						= f.input :city, :label=>"City*", required: false
 						= f.input :state, :label=>"State*", required: false
 						= f.input :zip_code, :label=>"Zip Code*", required: false
