--- a/app/views/home/categories.html.haml
+++ b/app/views/home/categories.html.haml
@@ -9,10 +9,9 @@
 			.row
 				.sapn10
 					.row.cat-row
-						- @registries.each do |registry|
-							- registry.offers.each do |product|														
-								.span2
-									= link_to(image_tag(product.images.first.picture), "/purchase/"+product.id.to_s)
+						- @registries.each do |product|
+							.span2
+								= link_to(image_tag(product.images.first.picture), "/purchase/"+product.id.to_s)
 					
 					/- (1..3).each do |i|
 					/	.row.cat-row
